<resources>
    <string name="app_name">Labsheet04</string>
    <string name="buttonSignup">Sign Up</string>
    <string name="channel_name">Sign Up</string>
    <string name="channel_description">Sign Up</string>
    <string name="CHANNEL_ID">Sign Up</string>
    <string name="Email">Email</string>
    <string name="Telephone" >Telephone</string>
    <string name="Password">Password</string>
    <string name="Re_Type_Password">Re-type Password</string>
    <string name="buttonRegister">Register</string>
    <string name="buttonCancel">Cancel</string>
    <string name="Name">Name</string>
</resources>
